Fixed escape not discarding username changes after editing on mac platform

When username is edited, if user presses escape, we expect the changes to
be discarded. The ui seemed fine but the username in the model was still
being updated. This cl fixes the problem and updates the corresponding
test.

Bug: 757752
Change-Id: I367ab82f31cacf97f158e2dbd20ec75b2c4a70a7
Reviewed-on: https://chromium-review.googlesource.com/626397
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Commit-Queue: Irmak Kavasoğlu <irmakk@google.com>
Cr-Commit-Position: refs/heads/master@{#496627}
Former-commit-id: 802da946eaf38c9ba8ea23811f44f654befdfe2a